<resources>
    <!--IMCAPP-->
    <string name="app_name">androidmaster</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="Weight">Peso</string>
    <string name="Age">Edad</string>
    <string name="Calculate">Calcular</string>
    <string name="Result">Tu resultado es</string>
    <string name="ReCalculate">Recalcular</string>
    <string name="Error">Error</string>

    <string name="LowWeight">Bajo peso</string>
    <string name="NormalWeight">Peso Normal</string>
    <string name="OverWeight">Sobre peso</string>
    <string name="Obesity">Obesidad</string>

    <string name="DesLowWeight">Estas por debajo de lo óptimo para tu peso y altura.</string>
    <string name="DesNormalWeight">Estas en lo óptimo para tu peso y altura.</string>
    <string name="DesOverWeight">Estas por sobre lo óptimo para tu peso y altura.</string>
    <string name="DesObesity">Estas por demaciado por sobre lo óptimo para tu peso y altura.</string>
    <!-- PlannerApp -->
    <string name="Planner_App">Planificador</string>
    <string name="Planner_Tittle">Bienvenido</string>
    <string name="Planner_Categories">Categorias</string>
    <string name="Business">Negocios</string>
    <string name="Personal">Personal</string>
    <string name="Ocio">Ocio</string>
    <string name="Sport">Deportes</string>
    <string name="Other">Otros</string>
    <string name="Planner_Task">Tareas</string>
    <string name="Add_Task">Añadir Tarea</string>
</resources>